# pbd-fluid-rs

./: 235.index.js  300.index.js  CITATION.cff  Cargo.toml  README.md  index.html  index.js  index.js.LICENSE.txt  index.ts  package-lock.json  package.json  webpack.config.js
.github/workflows/: main.yml
native/: Cargo.toml
native/src/: main.rs
solver/: Cargo.toml
solver/benches/: benchmark.rs
solver/src/: lib.rs
src/: bin.rs  lib.rs  solver.rs
