[package]
name = "pbd-fluid-rs"
version = "0.4.0"
repository = "https://github.com/cerrno/pcisph-rs"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[workspace]
members = ["native", "solver"]

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { workspace = true }
cgmath = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

solver = { path = "solver" }

[workspace.dependencies]
env_logger = "0.10.0"
log = "0.4.17"
glam = { version = "0.22.0", features = ["fast-math", "scalar-math"] }
criterion = "0.4.0"
glium = "0.32.1"
cgmath = "0.18.0"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
] }

[profile.release]
lto = "fat"
panic = "abort"
strip = true      # strip all 
codegen-units = 1
debug = 0         # Set this to 1 or two for more useful backtraces or flamegraphs

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
