[package]
name = "solver"
version = "0.0.0"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2018"
publish = false

[dependencies]
cgmath = "0.18.0"
glam = "0.20.0"
rayon = "*"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
